# A-Maze-Ing-42-

./: Makefile  README.md  a-maze-ing  a-maze-ing py  a-maze-ing.py  a_maze_ing.py  config.txt  maze.txt  maze_generation.py  maze_generator.py  parse_data.py  parsing.py  pyproject.toml  solve_maze.py  test.txt  unlock_maze.py
a-maze-ing/: Makefile  README.md  config.txt  maze.txt  pyproject.toml
a-maze-ing/mazegen/: a_maze_ing.py  cli.py  config.txt  maze.txt  maze_generator.py
a-maze-ing/mazegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
